# avatar-paper

./: .gitignore  Makefile  README.md  color.csv  pyproject.toml  requirements.txt  sessionInfo.txt
datasets/: .Rhistory  F-score_breast_cancer.csv  wbcd_res_best_model.csv
datasets/AIDS/: AIDS_base_100times.csv.tar.bz2  aids.csv.tar.bz2  aids_CTGAN_base_2.csv  aids_avatarized.tar.bz2  aids_avatarized_25time_k20_nf_5.csv  aids_avatarized_base_k15_nf5.csv  aids_avatarized_base_k20_nf5.csv  aids_original_data.csv  aids_synthpop_base.csv  iterations.csv.tar.bz2  variables_description.txt
dimension/: __init__.py  dimension_reduction.py  famd.py  mca.py  pca.py  projection.py  svd.py
generate_synthetic_data/: CTGAN_aids_time.py  CTGAN_data_generation.ipynb  CTGAN_wbcd_time.py  Synthpop_computation_time_expe.Rmd  Synthpop_data_generation.Rmd  avatarize_AIDS_time.py  avatarize_WBCD_time.py
lsg/: faiss_knn.py
metrics/: __init__.py  avatars_are_first_hit.py  combination_count.py  correlation_protection_rate.py  hidden_rate.py  inference_metrics.py  local_cloaking.py  radius_knn.py  record_to_avatar_distance.py  security_metrics_class.py
notebooks/: 1.1.WBCD_SVM_model_python.ipynb  1.2.WBCD_model_across_k_python.ipynb  2.Iteration_AIDS.ipynb  2.Iteration_WBCD.ipynb  CTGAN_data_generation.ipynb  Compute_generic_privacy_metrics.ipynb  Other_functions.Rmd  Synthpop_data_generation.Rmd  messageAB_AIDS.r  messageAB_WBCD.r  messageC_AIDS.r  messageC_WBCD_R.r  suppl.AIDS_R_Hazard_Ratio_distribution.ipynb  suppl.WBCD_R_F-scores_distribution.ipynb  suppl.dcr_nndr.ipynb
(+240 files in other folders)
