[tool.poetry]
name = "avatar-paper"
version = "0.1.0"
description = "Analyse the avatarization method"
authors = ["Octopize <contact@octopize-md.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scikit-learn = "^1.0.2"
numpy = "^1.22.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
saiph = "^0.2.5"
seaborn = "^0.11.2"
faiss-cpu = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
